--- a/views/pages/vote.ejs
+++ b/views/pages/vote.ejs
@@ -14,7 +14,7 @@
 
 <body>
 
-  	<span class="one" id="span_url"><%= socketURL %></span>
+  	<span class="one" id="span_url">https://votingapp-f1ln.onrender.com/</span>
  	<div class="container">
  		<div class="left">
  			<img src="https://i.pinimg.com/564x/9b/7a/0e/9b7a0e469da8874ba0359afabf158c91.jpg">
