--- a/views/pages/result.ejs
+++ b/views/pages/result.ejs
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  	<span class= "two" id="span_url"><%= socketURL %></span>
+  	<span class= "two" id="span_url">https://votingapp-f1ln.onrender.com/</span>
  	<div class="container">
  		<div class="left">
  			<img src="https://i.pinimg.com/564x/9b/7a/0e/9b7a0e469da8874ba0359afabf158c91.jpg">
